# mini-datalake

./: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
function/: main.py
localdev/: simulate_event.py
sample_event/: gcs.storage.object.v1.json
src/: __init__.py  config.py  extractor.py  handler.py  models.py  storage.py
tests/: __init__.py  test_config.py  test_extractor.py  test_handler.py  test_models.py  test_storage.py
