[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "N", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["src"]
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

